# proto

./: .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml  contract_test.go  descriptions.yaml  go.mod  go.sum  package-lock.json  package.json  proto-bump-template.yml  pyproject.toml  tsconfig.package.json
.github/: CODEOWNERS
.github/actions/setup-artifact-registry-npm/: action.yml  write-npmrc.sh
.github/workflows/: actionlint.yml  auto-tag.yml  ci.yml  fanout-proto-bump.yml  npm-publish.yml  workflow-security-guardrails.yml
contractfixtures/: fixtures.go  fixtures_test.go
eventhelpers/: eventhelpers.go  eventhelpers_test.go
proto/agents/v1/: agents.proto
proto/approvals/v1/: approvals.proto
proto/attribution/v1/: attribution.proto
proto/audit/v1/: audit.proto
proto/common/v1/: analytics.proto  authz.proto  delivery.proto  entity.proto  risk.proto
proto/compliance/v1/: compliance.proto
proto/config/v1/: config.proto
proto/connectors/v1/: connectors.proto
proto/entities/v1/: entities.proto
proto/events/v1/: change.proto  cloudevent.proto  evaluation.proto
proto/governance/v1/: governance.proto
proto/identity/v1/: organizations.proto  sessions.proto  tokens.proto
proto/keys/v1/: keys.proto
proto/memory/v1/: memory.proto
proto/meter/v1/: meter.proto
proto/notifications/v1/: notifications.proto
proto/objectives/v1/: objectives.proto
proto/prompts/v1/: prompts.proto
proto/registry/v1/: registry.proto
proto/tap/v1/: event.proto
scripts/: check-package-exports.mjs  check-workflow-security-baseline.sh  verify-action-pins.sh
(+40 files in other folders)
